[package]
name = "cyma"
version = "0.1.0"
edition = "2021"
description = "Composable views and associated data structures for nih-plug UIs made using VIZIA"

[workspace]
resolver = "2"
members = [
    "xtask",
    "examples/visualizers",
    "examples/benchmark-lots-of-visualizers"
]

[lib]
doctest = false

[dependencies]
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }
lazy_static = "1.4.0"
realfft = "3.3.0"
triple_buffer = "7.0.0"
crossbeam-channel = "0.5.13"
crossbeam-queue = "0.3.11"
arc-swap = "1.7.1"
atomic_bitfield = "0.1.0"
blinkcast = "0.2.0"

[dev-dependencies]
rand = "0.8.5"
