[package]
name = "cyma"
version = "0.2.0"
edition = "2021"
description = "Composable views and associated data structures for nih-plug UIs made using VIZIA"

[workspace]
resolver = "2"
members = [
    "xtask",
    "examples/visualizers",
    "examples/peak_graph",
    "examples/benchmark_lots_of_visualizers"
]

[lib]
doctest = false

[dependencies]
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }
lazy_static = "1.4.0"
realfft = "3.3.0"
triple_buffer = "7.0.0"
crossbeam-channel = "0.5.13"

[dev-dependencies]
rand = "0.8.5"
